fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -710,6 +710,10 @@ textarea {
 	text-decoration: underline;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.5em 1em 0 0;
 	padding: 0;
